# aqua-grow

./: .gitignore  README.md  Readme.md
.github/workflows/: deploy-services.yml
irrigation_service/: Dockerfile  api.py  app.py  pyproject.toml
irrigation_service/src/: app.py
monitoring_service/: Dockerfile  README.md  api.py  app.py  models.py  pyproject.toml
monitoring_service/src/: api.py  app.py
notification_service/: Dockerfile  pyproject.toml
user_service/: Dockerfile  api.py  app.py  migrate.sh  models.py  pyproject.toml
user_service/migrations/versions/: 8902dbb1986e_second.py
user_service/src/: api.py  app.py  migrate.sh  models.py
