[tool.poetry]
name = "irrigation-service"
version = "0.1.0"
description = ""
authors = ["Ogo <ogochukwubah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
paho-mqtt = "^2.1.0"
python-dotenv = "^1.1.1"
flask-jwt-extended = "^4.7.1"
requests = "^2.32.4"
flask-restx = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
