[tool.poetry]
name = "monitoring-service"
version = "0.1.0"
description = ""
authors = [
    "Ogochukwu"
]

[tool.poetry.dependencies]
python = "^3.10"
flask = ">=3.1.0,<4.0.0"
paho-mqtt = ">=2.1.0,<3.0.0"
flask-jwt-extended = ">=4.7.1,<5.0.0"
requests = ">=2.32.3,<3.0.0"
flask-restx = ">=1.3.0,<2.0.0"
influxdb-client = "^1.48.0"
python-dotenv = "^1.1.0"
flask-cors = "^6.0.0"


[build-system]
requires = ["poetry-core>=1.4.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
