[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = [
    "Ogochukwu"
]

#packages = [
#  { include = "user_service", from = "src" }
#]



[tool.poetry.dependencies]
python = "^3.10"
flask = ">=3.1.0,<4.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
flask-migrate = ">=4.1.0,<5.0.0"
flask-bcrypt = ">=1.0.1,<2.0.0"
flask-jwt-extended = ">=4.7.1,<5.0.0"
requests = ">=2.32.3,<3.0.0"
flask-restx = ">=1.3.0,<2.0.0"
psycopg2-binary = "*"



[build-system]
requires = ["poetry-core>=1.4.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
